# TaskNest-AI-Powerd-Task-Management-System

./: .gitignore  AUTHENTICATION_ARCHITECTURE.md  BETTER_AUTH_IMPLEMENTATION.md  COMPLETION_REPORT.md  DEPLOYMENT.md  Hackathon II - Todo Spec-Driven Development.md  PHASE3_CHAT_COMPLETE.md  PHASE3_FLOATING_CHAT_COMPLETE.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.md  README.md  README_DEPLOY.md  TESTING_CHECKLIST.md  TEST_RESULTS.md  docker-compose.yml  vercel.json
backend/: .env.example  Dockerfile  check_constraints.py  cleanup_migration.py  mcp_server.py  pyproject.toml  pytest.ini  run_migration.sh  test_chat_flow.py  test_complete_chatbot.py  test_complex_task.py  test_dual_provider.py  test_fuzzy_search.py  test_groq.py  test_simple.py  test_simple_resolution.py  test_smart_simple.py  test_task_name_resolution.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  003_chat_tables.py  004_user_settings.py  005_add_conversation_title.py  20260214_1603_a36040e77ef4_add_dashboard_enhancement_models_and_.py
backend/migrations/: add_activity_tracking.py
backend/src/: __init__.py  config.py  database.py  main.py  scheduler.py
backend/src/agents/: __init__.py  tasknest_agent.py
backend/src/api/: __init__.py  analytics.py  assignments.py  auth.py  comments.py  deps.py  milestones.py  notifications.py  projects.py  settings.py  tags.py  tasks.py  teams.py
backend/src/llm/: __init__.py  (+5 more)
backend/tests/: README.md  conftest.py  test_auth_api.py  test_backend_verification.py  test_tags_api.py  test_task_service.py  test_tasks_api.py
(+264 files in other folders)
